2008-09-06  Jeff Law <law@redhat.com>

	* gcc.c-torture/execute/memcpy-bi.c: Include <string.h>
 
2008-09-06  Tobias Burnus  <burnus@net-b.de>

	PR fortran/37399
	* gfortran.dg/size_kind.f90: Remove allocate statement
	as it overflows at compile time on 32bit systems.

2008-09-06  Jan Hubicka  <jh@suse.cz>

	* g++.dg/tree-ssa-pr14703.C: New testcase.

2008-09-06  Tobias Burnus  <burnus@net-b.de>

	PR fortran/36153
	* gfortran.dg/size_kind.f90: New test.

2008-09-06  Steven G. Kargl  <kargls@comcast.net>

	PR fortran/33229
	* gfortran.dg/intrinsic_subroutine.f90: New test.

2008-09-06  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.target/mips/mips.exp (dg-mips-options): Make
	-mr10k-cache-barrier=* imply -mips3 or above.
	* gcc.target/mips/cache-1.c: New test.
	* gcc.target/mips/r10k-cache-barrier-1.c: Likewise.
	* gcc.target/mips/r10k-cache-barrier-2.c: Likewise.
	* gcc.target/mips/r10k-cache-barrier-3.c: Likewise.
	* gcc.target/mips/r10k-cache-barrier-4.c: Likewise.
	* gcc.target/mips/r10k-cache-barrier-5.c: Likewise.
	* gcc.target/mips/r10k-cache-barrier-6.c: Likewise.
	* gcc.target/mips/r10k-cache-barrier-7.c: Likewise.
	* gcc.target/mips/r10k-cache-barrier-8.c: Likewise.
	* gcc.target/mips/r10k-cache-barrier-9.c: Likewise.
	* gcc.target/mips/r10k-cache-barrier-10.c: Likewise.
	* gcc.target/mips/r10k-cache-barrier-11.c: Likewise.
	* gcc.target/mips/r10k-cache-barrier-12.c: Likewise.
	* gcc.target/mips/r10k-cache-barrier-13.c: Likewise.
	* gcc.target/mips/r10k-cache-barrier-14.c: Likewise.
	* gcc.target/mips/r10k-cache-barrier-15.c: Likewise.

2008-09-05  Daniel Kraft  <d@domob.eu>

	PR fortran/35837
	* gfortran.dg/save_3.f90: New test.

2008-09-05  Douglas Gregor  <doug.gregor@gmail.com>

	PR c++/37342
	* g++.dg/other/canon-37342.C: New.
	
2008-09-05  Joseph Myers  <joseph@codesourcery.com>

	* gcc.c-torture/compile/20080903-1.c: New test.

2008-09-05  Daniel Kraft  <d@domob.eu>

	PR fortran/36746
	* gfortran.dg/implicit_derived_type_1.f90: New test.